--- a/html/style.css
+++ b/html/style.css
@@ -119,8 +119,8 @@ a img {
 #header img{
 	display: block;
 	margin: 0 auto 10px;
-	width:360px;
-	height:60px;
+	width:25%;
+	height:8%;
 	position: absolute; top: 15px; left: 3%;
 }
   
@@ -137,9 +137,9 @@ body {
 	font-size: 12px;
 }
 #login {
-	margin-top: 15px;
-	padding: 100px;
-	width: 400px;
+	margin-top: 1.5%;
+	padding: 10%;
+	width: 30%;
 	height: 500px;
 	background-color: rgba(255,255,255,0.7);
 }
