--- a/html/style.css
+++ b/html/style.css
@@ -140,7 +140,7 @@ body {
 	margin-top: 1.5%;
 	padding: 10%;
 	width: 30%;
-	height: 500px;
+	height: 10%;
 	background-color: rgba(255,255,255,0.7);
 }
 
