--- a/html/style.css
+++ b/html/style.css
@@ -98,14 +98,12 @@ a img {
 	background-color: black;
 	opacity: 0.6; 
 	font-size: 17px;
-	
 } 
 #menu ul li { 
     display: inline;  
     margin: 0;  
 }
 #menu ul li a {  
-    padding: 40px;  
     font-family: Century Gothic;  
     color: white; 
 	text-decoration: none;
@@ -127,21 +125,33 @@ a img {
 body {
 	background-image: url("gracht.jpg");
 }
+.content{
+	margin: 0 auto;
+	width: 980px;
+}
 
-#login h1 {
-    font-family:Century Gothic;
+.formcontainer{
+	margin: 0 auto;
+	width: 37%;
+	background-color: rgba(255,255,255,0.7);
+	}
+	
+form {
+	margin-top: 1.5%;
+	padding-bottom: 100px;
+	height: 50%;
+	font-family: Century Gothic;
+	text-align: center;
+}
+
+fieldset {
+	text-align: center;
+	}
+
+form h1{
+	padding-top: 20px;
 	font-size: 30px;
 }
-#login a {
-	font-family:Century Gothic;
+form a{
 	font-size: 12px;
 }
-#login {
-	margin-top: 1.5%;
-	padding: 10%;
-	width: 30%;
-	height: 10%;
-	background-color: rgba(255,255,255,0.7);
-}
-
-
