--- a/html/style.css
+++ b/html/style.css
@@ -98,6 +98,7 @@ a img {
 	background-color: black;
 	opacity: 0.6; 
 	font-size: 17px;
+	text-align: center;
 } 
 #menu ul li { 
     display: inline;  
@@ -107,6 +108,7 @@ a img {
     font-family: Century Gothic;  
     color: white; 
 	text-decoration: none;
+	padding: 0 20px;
 }
 #header {
     font-family: Verdana;
@@ -132,6 +134,7 @@ body {
 
 .formcontainer{
 	margin: 0 auto;
+	margin-top: 90px;
 	width: 37%;
 	background-color: rgba(255,255,255,0.7);
 	}
