--- a/html/style.css
+++ b/html/style.css
@@ -10,7 +10,7 @@ dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
 	border: 0;
-	font-family: inherit;
+	font-family: Century Gothic;
 	font-size: 100%;
 	font-style: inherit;
 	font-weight: inherit;
@@ -132,7 +132,7 @@ body {
 	width: 980px;
 }
 
-.formcontainer{
+.maincontent{
 	margin: 0 auto;
 	margin-top: 90px;
 	width: 37%;
@@ -157,14 +157,33 @@ form h1{
 	font-size: 30px;
 }
 
+h1{
+	padding-top: 20px;
+	font-size: 30px;
+	text-align: center;
+}
+
 form h2{
-		font-size: 12px;
+		font-size: 14px;
+}
+
+h2{
+	font-size: 14px;
+	text-align: left;
+}
+
+h3{
+	font-size: 14px;
+	text-align: center;
 }
 
 form a{
-	font-size: 12px;
+	font-size: 14px;
 }
 
+p {
+	font-size: 12px;
+}
 #footer {
     list-style-type: none;  
 	margin-top: 70%;
@@ -185,6 +204,10 @@ form a{
 	text-decoration: none;
 	padding: 0 20px;
 
+}
+
+.hidden {
+	display: none;
 }
 	
 
