--- a/html/style.css
+++ b/html/style.css
@@ -170,6 +170,7 @@ form h2{
 h2, p{
 	font-size: 14px;
 	text-align: left;
+	padding: 30px;
 }
 
 h3{
@@ -179,6 +180,17 @@ h3{
 
 form a{
 	font-size: 14px;
+}
+
+form li {
+	list-style-type: none;
+	list-style: none;
+}
+
+form li p{
+	text-align: left;
+	padding-left: 5px;
+	display: inline;  
 }
 
 #footer {
@@ -202,7 +214,6 @@ form a{
 	padding: 0 20px;
 
 }
-
 .hidden {
 	display: none;
 }
