--- a/html/style.css
+++ b/html/style.css
@@ -175,9 +175,11 @@ form h2{
 h2, p{
 	font-size: 14px;
 	text-align: left;
-	padding: 30px;
 }
 
+h2{
+	padding: 30px;
+}
 h3{
 	font-size: 14px;
 	text-align: center;
