--- a/html/style.css
+++ b/html/style.css
@@ -143,7 +143,15 @@ a {
 	width: 50%;
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
-	}
+}
+.sidecontent{
+	margin: 0 auto;
+	margin-top: 0px;
+	width: 5%;
+	background-color: rgba(255,255,255,0.7);
+	padding: 100px;
+	float: right;
+	}	
 	
 form {
 	margin-top: 1.5%;
