--- a/html/style.css
+++ b/html/style.css
@@ -210,6 +210,8 @@ form li p{
 	text-align: left;
 	padding-left: 5px;
 	display: inline;  
+	vertical-align: top;
+	display: inline-block
 }
 
 #footer {
