--- a/html/style.css
+++ b/html/style.css
@@ -210,6 +210,16 @@ form p {
 	 display: inline;  
      margin: 0;
 }
+
+.sidecontent {
+	margin: 0 auto;
+	margin-top: 90px;
+	width: 30%;
+	background-color: rgba(255,255,255,0.7);
+	padding: 30px;
+}
+
+
 #footer {
     list-style-type: none;  
 	margin-top: 20%;
