--- a/html/style.css
+++ b/html/style.css
@@ -149,9 +149,9 @@ a {
 
 .sidecontent {
 	margin: 0 auto;
-	margin-top: 90px;
+	margin-top: 10%;
 	margin-right: 3%;
-	width: 30%;
+	width: 100%;
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
 }
