--- a/html/style.css
+++ b/html/style.css
@@ -147,10 +147,7 @@ a {
 }
 
 .homemap{
-	margin: 0 auto;
-	margin-top: 90px;
-	margin-left: 90px;
-	margin-right: 40px;
+	margin: 90px 40px 0 90px; 
 	width: 50%;
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
