--- a/html/style.css
+++ b/html/style.css
@@ -135,7 +135,7 @@ a {
 }
 .content{
 	margin: 0 auto;
-	width: 980px;
+	width: 80%;
 }
 
 .maincontent{
@@ -145,13 +145,29 @@ a {
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
 }
+
+.homemap{
+	margin-left: 90px;
+	margin-top: 90px;
+	width: 50%;
+	background-color: rgba(255,255,255,0.7);
+	padding: 30px;
+	float: left;
+}
+
+#map {
+	height:500px;
+	width:100%;
+}
+
 .sidecontent{
-	margin: 0 auto;
-	margin-top: 0px;
+	margin-top: 90px;
 	width: 5%;
 	background-color: rgba(255,255,255,0.7);
-	padding: 100px;
+	padding: 200px;
+	padding-bottom: 38.4%;
 	float: right;
+	margin-right: 90px;
 	}	
 	
 form {
@@ -213,17 +229,16 @@ form li p{
 	display: inline;  
 	vertical-align: top;
 	display: inline-block
-<<<<<<< HEAD
-=======
+
 }
 form p {
 	 display: inline;  
      margin: 0;
->>>>>>> a2a3ec125bd043813ed0f1230f74ccc6f54c0aa2
+
 }
 #footer {
     list-style-type: none;  
-	margin-top: 20%;
+	margin-top: 70%%;
 	padding: 5px;
 	opacity: 0.7;
 	background-color: black;
