--- a/html/style.css
+++ b/html/style.css
@@ -147,9 +147,9 @@ a {
 }
 
 .homemap{
-<<<<<<< HEAD
-	margin-left: 90px;
+	margin-left: 2.5%;
 	margin-top: 90px;
+	margin-right: 2.5%
 	width: 50%;
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
@@ -161,23 +161,20 @@ a {
 	width:100%;
 }
 
-.sidecontent{
-	margin-top: 90px;
-	width: 5%;
-	background-color: rgba(255,255,255,0.7);
-	padding: 200px;
-	padding-bottom: 38.4%;
-	float: right;
-	margin-right: 90px;
-	}	
-
 
 .sidecontent {
-	margin: 90px 40px 0 90px; 
-	width: 50%;
+	margin: 90px 40px 0 90px;
+	margin-left: 2.5% ; 
+	width: 37.5%;
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
 	float: left
+}
+
+.wrapper {
+	width: 95%; 
+	margin: 0 auto;
+	background-color: transparent; 
 }
 
 form {
