--- a/html/style.css
+++ b/html/style.css
@@ -149,7 +149,7 @@ a {
 .homemap{
 	margin-left: 2.5%;
 	margin-top: 90px;
-	margin-right: 2.5%
+	margin-right: 2.5% ;
 	width: 50%;
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
