--- a/html/style.css
+++ b/html/style.css
@@ -163,8 +163,7 @@ a {
 
 
 .sidecontent {
-	margin: 90px 40px 0 90px;
-	margin-left: 2.5% ; 
+	margin-top: 90px; 
 	width: 37.5%;
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
