--- a/html/style.css
+++ b/html/style.css
@@ -167,7 +167,8 @@ a {
 	width: 37.5%;
 	background-color: rgba(255,255,255,0.7);
 	padding: 30px;
-	float: left
+	float: left;
+	font-size: 16px;
 }
 
 .wrapper {
