--- a/html/style.css
+++ b/html/style.css
@@ -173,6 +173,12 @@ a {
 	height: 635px;
 }
 
+.sidecontent ul li{
+	overflow: hidden;
+	margin: 10px 0;
+
+}
+
 .wrapper {
 	width: 95%; 
 	margin: 0 auto;
@@ -259,7 +265,7 @@ form p {
     list-style-type: none;  
 	margin-top: 70%;
 	padding: 5px;
-	opacity: 0.65;
+	opacity: 0.9;
 	background-color: black;
 	text-align: center;
 	font-family: Century Gothic;
