--- a/html/style.css
+++ b/html/style.css
@@ -128,7 +128,7 @@ body {
 	background-image: url("gracht.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-size= 100% 100%;
+	background-size: 100% 100%;
 }
 
 a {
