--- a/html/style.css
+++ b/html/style.css
@@ -94,10 +94,10 @@ a img {
 #menu ul {
     list-style-type: none;  
 	margin-top: 0;
-	padding: 5px;
+	padding: 8px;
 	background-color: black;
 	opacity: 0.65; 
-	font-size: 17px;
+	font-size: 111%;
 	text-align: center;
 } 
 #menu ul li { 
@@ -275,7 +275,7 @@ form p {
 }
 #footer ul li a {
 	color: white;
-	font-size: 17px;
+	font-size: 90%;
 	text-decoration: none;
 	padding: 0 20px;
 	bottom: 0px;
