--- a/html/style.css
+++ b/html/style.css
@@ -97,7 +97,7 @@ a img {
 	padding: 8px;
 	background-color: black;
 	opacity: 0.65; 
-	font-size: 111%;
+	font-size: 90px;
 	text-align: center;
 } 
 #menu ul li { 
@@ -276,7 +276,7 @@ form p {
 }
 #footer ul li a {
 	color: white;
-	font-size: 90%;
+	font-size: 70px;
 	text-decoration: none;
 	padding: 0 20px;
 	bottom: 0px;
