--- a/html/style.css
+++ b/html/style.css
@@ -286,5 +286,71 @@ form p {
 	font-size: 14px;
 	margin-bottom: 50px ;
 }
+
+@media (max-width: 600px) {
+  .facet_sidebar {
+    display: none;
+	}
+#header {
+    font-family: Verdana;
+}
+
+#header img{
+	display: block;
+	margin: 1% 1%;
+	padding: 0.5%;
+	width:25%;
+	height:8%;
+	position: relative; 
+}
+
+.homemap{
+	margin-left: 2.5%;
+	margin-top: 90px;
+	margin-right: 2.5% ;
+	width: 46%;
+	background-color: rgba(255,255,255,0.85);
+	padding: 30px;
+	float: left;
+}
+
+.sidecontent {
+	margin-top: 90px; 
+	width: 46%;
+	background-color: rgba(255,255,255,0.85);
+	padding: 30px;
+	float: left;
+	font-size: 16px;
+	overflow: auto;
+	height: 635px;
+}
+
+.sidecontent ul li{
+	overflow: hidden;
+	margin: 10px 0;
+
+}
+
+#footer {
+    list-style-type: none;  
+	margin-top: 80%;
+	padding: 5px;
+	opacity: 0.9;
+	background-color: black;
+	text-align: center;
+	font-family: Century Gothic;
+}
+#footer ul li{
+    display: inline;  
+    margin: 0;
+}
+#footer ul li a {
+	color: white;
+	font-size: 20px;
+	text-decoration: none;
+	padding: 0 20px;
+	bottom: 0px;
+	}
+}
 	
 
