--- a/html/style.css
+++ b/html/style.css
@@ -287,7 +287,7 @@ form p {
 	margin-bottom: 50px ;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 700px) and (device-aspect-ratio: 40/71) {
 #header img{
 	margin: 1% 1%;
 	padding: 60%;
