--- a/html/style.css
+++ b/html/style.css
@@ -286,8 +286,8 @@ form p {
 	font-size: 14px;
 	margin-bottom: 50px ;
 }
-
-@media (max-width: 700px) and (device-aspect-ratio: 40/71) {
+@media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
+/*media (max-width: 700px) and (device-aspect-ratio: 40/71) {*/
 #header img{
 	margin: 1% 1%;
 	padding: 60%;
