--- a/html/style.css
+++ b/html/style.css
@@ -286,7 +286,8 @@ form p {
 	font-size: 14px;
 	margin-bottom: 50px ;
 }
-@media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
+
+@media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) {
 /*media (max-width: 700px) and (device-aspect-ratio: 40/71) {*/
 #header img{
 	margin: 1% 1%;
