--- a/html/style.css
+++ b/html/style.css
@@ -340,16 +340,16 @@ form p {
 }
 
 #footer {
-	margin-top: 20%;
-	padding: 20px;
-	display: inline;
+ 	margin-top: 10%;
+	padding: 5px;
+	text-align: center;
 }
 
 #footer ul li a {
 	font-size: 20px;
 	padding: 0 20px;
 	bottom: 0px;
-	}
+}
 }
 	
 
