--- a/html/style.css
+++ b/html/style.css
@@ -340,14 +340,14 @@ form p {
 }
 
 #footer {
- 	margin: 0 auto;
+ 	margin: 0;
 	padding: 5px;
 	text-align: center;
 }
 
 #footer ul li a {
 	font-size: 20px;
-	padding: 0 auto;
+	padding: 0 20px;
 	bottom: 0px
 }
 }
