--- a/html/style.css
+++ b/html/style.css
@@ -263,7 +263,7 @@ form p {
 
 #footer {
     list-style-type: none;  
-	margin-top: 80%;
+	margin-bottom: 2%;
 	padding: 5px;
 	opacity: 0.9;
 	background-color: black;
