--- a/html/style.css
+++ b/html/style.css
@@ -346,8 +346,9 @@ form p {
 }
 
 #footer {
- 	margin-bottom: -20%;
+ 	margin-bottom: 2%;
 	padding: 5px;
+	opacity: 0.7;
 	text-align: center;
 }
 
