--- a/html/style.css
+++ b/html/style.css
@@ -345,6 +345,15 @@ form p {
 	background-color: transparent; 
 }
 
+.maincontent {
+	margin: 0 auto;
+	margin-top: 90px;
+	width: 80%;
+	height: 100%;
+	background-color: rgba(255,255,255,0.85);
+	padding: 30px;
+}
+
 #footer {
  	margin-bottom: 2%;
 	padding: 5px;
