--- a/html/style.css
+++ b/html/style.css
@@ -349,9 +349,20 @@ form p {
 	margin: 0 auto;
 	margin-top: 90px;
 	width: 80%;
-	height: 100%;
+	height: 200%;
 	background-color: rgba(255,255,255,0.85);
 	padding: 30px;
+}
+
+form h1{
+	padding-top: 20px;
+	font-size: 50px;
+}
+
+h1{
+	padding-top: 20px;
+	font-size: 70px;
+	text-align: center;
 }
 
 #footer {
