--- a/html/style.css
+++ b/html/style.css
@@ -354,6 +354,11 @@ form p {
 	padding: 30px;
 }
 
+fieldset a {
+	width: 200%;
+	height:150%;
+	}
+
 form h1{
 	padding-top: 20px;
 	font-size: 50px;
