--- a/html/style.css
+++ b/html/style.css
@@ -124,7 +124,7 @@ a img {
 }
   
 body {
-	background-image: url("gracht.jpg");
+	background-image: url("gracht2.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: 100% 100%;
