--- a/html/style.css
+++ b/html/style.css
@@ -117,6 +117,8 @@ a img {
 #header img{
 	display: block;
 	margin: 1% 1%;
+	margin-left: 0 auto;
+	margin-right:0 auto;
 	padding: 0.5%;
 	width:25%;
 	height:8%;
