--- a/html/style.css
+++ b/html/style.css
@@ -117,8 +117,7 @@ a img {
 #header img{
 	display: block;
 	margin: 1% 1%;
-	margin-left: 0 auto;
-	margin-right:0 auto;
+	margin-left: 38%;
 	padding: 0.5%;
 	width:25%;
 	height:8%;
