--- a/html/style.css
+++ b/html/style.css
@@ -351,8 +351,7 @@ form p {
 	margin: 10px 0;
 }
 
-.wrapper {
-	width: 95%; 
+#wrapper {
 	max-width: 980px; 
 	margin: 0 auto;
 	background-color: transparent; 
