--- a/html/style.css
+++ b/html/style.css
@@ -268,7 +268,7 @@ form p {
 
 #footer {
     list-style-type: none;  
-	margin-top: 80%;
+	margin-top: 90px;
 	padding: 5px;
 	opacity: 0.9;
 	background-color: black;
@@ -294,7 +294,8 @@ form p {
 
 
 #wrapper {
-	max-width: 980px; 
+	max-width: 980px;
+	overflow: hidden;
 	margin: 0 auto;
 	background-color: transparent; 
 }
