--- a/html/style.css
+++ b/html/style.css
@@ -399,6 +399,7 @@ background:#fff;
 	height: 200%;
 	background-color: rgba(255,255,255,0.85);
 	padding: 30px;
+	padding-bottom: 20px;
 }
 
 #footer {
