--- a/html/style.css
+++ b/html/style.css
@@ -115,6 +115,12 @@ a img {
     font-family: Verdana;
 }
 
+#header h1 {
+	text-align: right;
+	padding-right: 50px;
+	padding-bottom: 30px;
+}
+
 #header img{
 	display: block;
 	margin: 1% 1%;
