--- a/html/style.css
+++ b/html/style.css
@@ -126,7 +126,7 @@ a img {
 	display: inline block;
 	margin: 1% 1%;
 	margin-left: 40%;
-	margin-right: 15%
+	margin-right: 15% ;
 	padding: 0.5%;
 	width:25%;
 	height:8%;
