--- a/html/style.css
+++ b/html/style.css
@@ -117,14 +117,12 @@ a img {
 
 #header h1 {
 	text-align: right;
-	padding-right: 50px;
 	padding-bottom: 10px;
 	display: inline-block;
 }
 
 #header img{
-	display: inline block;
-	margin: 1% 1%;
+	display: inline-block;
 	margin-left: 41%;
 	margin-right: 14% ;
 	padding: 0.5%;
