--- a/html/style.css
+++ b/html/style.css
@@ -18,6 +18,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	outline: 0;
 	padding: 0;
 	vertical-align: baseline;
+
 }
 
 html {
@@ -207,7 +208,6 @@ form {
 	margin-left: 15px;
 }
 
-
 fieldset {
 	text-align: center;
 	}
@@ -223,6 +223,8 @@ h1{
 	font-size: 30px;
 	text-align: center;
 	padding-top: 15px;
+	margin-right: 15px;
+	margin-left: 15px;
 }
 
 h2{
@@ -253,12 +255,16 @@ h2 a{
 h3{
 	font-size: 14px;
 	text-align: center;
+	margin-right: 15px;
+	margin-left: 15px;
 }
 
 h4 {
 	font-size: 14px;
 	text-align: right;
 	padding: 10px;
+	margin-right: 15px;
+	margin-left: 15px;
 }
 
 .error {
