--- a/html/style.css
+++ b/html/style.css
@@ -267,6 +267,10 @@ h4 {
 	margin-left: 15px;
 }
 
+h5 {
+	margin-left: 15px;
+}
+
 .error {
 	font-family: Century Gothic, Arial;
 	color: #FF0000;
