--- a/html/style.css
+++ b/html/style.css
@@ -282,6 +282,13 @@ h5 {
 	font-weight: bold;
 }
 
+.confirm {
+	font-family: Century Gothic, Arial;
+	color: green;
+	text-align: center;
+	font-weight: bold;
+}
+
 form a{
 	font-size: 14px;
 }
