--- a/html/style.css
+++ b/html/style.css
@@ -351,6 +351,14 @@ form p {
 	background-color: transparent; 
 }
 
+#admin_form{
+	padding-bottom: 20px;
+	font-family: Century Gothic, Arial;
+	text-align: left;
+	margin-right: 15px;
+	margin-left: 15px;
+
+}
 
 /*tabs
 */
@@ -371,7 +379,6 @@ height: 24px;
 
 #Tabs ul li a {
 position: relative;
-margin-top: 16px;
 display: block;
 margin-left: 6px;
 line-height: 24px;
