margin bij reserveren

--- a/html/style.css
+++ b/html/style.css
@@ -484,11 +484,7 @@ Mediacss
 	padding: 20px;
 }
 
-#bookings-1 li p {
-	margin-left: 15px;
-}
-
-.booking li p{
+.booking p{
 	margin-left: 15px;
 }
 
