--- a/html/style.css
+++ b/html/style.css
@@ -299,11 +299,10 @@ form li {
 }
 
 form li p{
-	text-align: left;
-	padding-left: 5px;
+	text-align: center;
+	padding: 5px;
 	display: inline;  
-	vertical-align: top;
-	display: inline-block
+	display: block
 
 }
 form p {
@@ -311,6 +310,10 @@ form p {
      margin: 0;
 
 }
+
+#submit {
+	margin-top: 10px;
+}	
 
 #map {
 	height: 500px;
