margin bij reserveren

--- a/html/style.css
+++ b/html/style.css
@@ -324,6 +324,10 @@ form p {
 	margin-left:140px;
 }
 
+#new-2 {
+	margin-left:140px;
+}
+
 #footer {
     list-style-type: none;  
 	margin-top: 90px;
