--- a/html/style.css
+++ b/html/style.css
@@ -237,13 +237,13 @@ h2{
 }
 
 form h2{
-		font-size: 14px;
-		margin-right: 15px;
-		margin-left: 15px;
+	font-size: 14px;
+	margin-right: 15px;
+	margin-left: 15px;
 
 }
 
-h2, p{
+h2{
 	font-size: 14px;
 	text-align: left;
 	margin-right: 15px;
